--- a/package.json
+++ b/package.json
@@ -4,17 +4,26 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/styles": "^4.0.2",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "moment": "^2.29.1",
+    "mui-datatables": "^3.7.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.20.5",
+    "react-loading-overlay": "^1.0.1",
     "react-redux": "^7.2.6",
     "react-redux-toastr": "^7.6.6",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
